Update to latest goa
Add error response declarations.
