# public/swagger/swagger.yaml
@@ -58,7 +58,7 @@ definitions:
     title: 'Mediatype identifier: application/vnd.account+json; type=collection'
     type: array
   AccountLink:
-    description: A tenant account (link view)
+    description: A tenant account (default view)
     example:
       created_at: 2015-09-23T11:51:57-07:00
       created_by: me@goa.design
@@ -66,6 +66,16 @@ definitions:
       id: 1
       name: test
     properties:
+      created_at:
+        description: Date of creation
+        example: 2015-09-23T11:51:57-07:00
+        format: date-time
+        type: string
+      created_by:
+        description: Email of account owner
+        example: me@goa.design
+        format: email
+        type: string
       href:
         description: API href of account
         example: /accounts/1
@@ -75,9 +85,56 @@ definitions:
         example: 1
         format: int64
         type: integer
+      name:
+        description: Name of account
+        example: test
+        type: string
     required:
     - id
     - href
+    - name
+    - created_at
+    - created_by
+    title: 'Mediatype identifier: application/vnd.account+json'
+    type: object
+  AccountTiny:
+    description: A tenant account (default view)
+    example:
+      created_at: 2015-09-23T11:51:57-07:00
+      created_by: me@goa.design
+      href: /accounts/1
+      id: 1
+      name: test
+    properties:
+      created_at:
+        description: Date of creation
+        example: 2015-09-23T11:51:57-07:00
+        format: date-time
+        type: string
+      created_by:
+        description: Email of account owner
+        example: me@goa.design
+        format: email
+        type: string
+      href:
+        description: API href of account
+        example: /accounts/1
+        type: string
+      id:
+        description: ID of account
+        example: 1
+        format: int64
+        type: integer
+      name:
+        description: Name of account
+        example: test
+        type: string
+    required:
+    - id
+    - href
+    - name
+    - created_at
+    - created_by
     title: 'Mediatype identifier: application/vnd.account+json'
     type: object
   Bottle:
@@ -105,7 +162,7 @@ definitions:
       vintage: 2012
     properties:
       account:
-        $ref: '#/definitions/Account'
+        $ref: '#/definitions/AccountTiny'
       href:
         description: API href of bottle
         example: /accounts/1/bottles/1
@@ -163,8 +220,11 @@ definitions:
       id: 1
       links:
         account:
+          created_at: 2015-09-23T11:51:57-07:00
+          created_by: me@goa.design
           href: /accounts/1
           id: 1
+          name: test
       name: Number 8
       rating: 3
       varietal: Merlot
@@ -180,8 +240,11 @@ definitions:
       id: 1
       links:
         account:
+          created_at: 2015-09-23T11:51:57-07:00
+          created_by: me@goa.design
           href: /accounts/1
           id: 1
+          name: test
       name: Number 8
       rating: 3
       varietal: Merlot
@@ -197,8 +260,11 @@ definitions:
       id: 1
       links:
         account:
+          created_at: 2015-09-23T11:51:57-07:00
+          created_by: me@goa.design
           href: /accounts/1
           id: 1
+          name: test
       name: Number 8
       rating: 3
       varietal: Merlot
@@ -212,7 +278,7 @@ definitions:
     description: BottleLinks contains links to related resources of Bottle.
     properties:
       account:
-        $ref: '#/definitions/AccountLinkLink'
+        $ref: '#/definitions/AccountLink'
     title: BottleLinks
     type: object
   CreateAccountPayload:
@@ -428,6 +494,10 @@ paths:
               description: href to created resource
               pattern: /accounts/[0-9]+
               type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
       schemes:
       - http
       summary: create account
@@ -445,6 +515,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -466,6 +540,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -490,6 +568,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -519,6 +601,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/BottleCollection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -548,6 +634,10 @@ paths:
               description: href to created resource
               pattern: ^/accounts/[0-9]+/bottles/[0-9]+$
               type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -571,6 +661,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -596,6 +690,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Bottle'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -623,6 +721,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -651,6 +753,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
@@ -675,6 +781,10 @@ paths:
       responses:
         "101":
           description: Switching Protocols
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
       schemes:
       - ws
       summary: watch bottle
